  * add support for Mod_Python on Apache 2.x and ASP on IIS
  * Several changes to standalone.py:
    - -h commandline option to specify hostname for non local use.
    - -r commandline option may be repeated to use more than repository
      before actually installing ViewCVS.
    - New GUI field to test paging.
  * add new, better-integrated query interface (2004-Jul-17)
  * add new "root_as_url_component" option to embed root names as
    path components in ViewCVS URLs for a more natural URL scheme
    in ViewCVS configurations with multiple repositories.
    (2002-Dec-12)
  * add new "use_localtime" option to display local times instead of
    UTC times (2002-May-06)
  * add new "root_parents" option to make it possible to add and
    remove repositories without modifying the ViewCVS configuration
    (2004-Jul-16)
  * add new "template_dir" option to facilitate switching between
    sets of templates (2005-Feb-08)
  * add new "sort_group_dirs" option to disable grouping of
    directories in directory listings (2005-Mar-07)
  * make "default_root" option optional. When no root is specified,
    show a page listing all available repositories (2005-Feb-04)
  * make "checkout_magic" obsolete (but still enabled by default for
    URL compatibility with old versions of ViewCVS). When disabled,
    bare file URLs (with no query parameters) will return checked
    out file contents instead of log listings. That way, checkout
    URLs no longer need magic /*checkout*/ strings in them for 
    relative links and image paths in checked out HTML files to work
    (2005-Feb-13)
  * hide CVS "Attic" directories and add simple toggle for showing
    dead files in directory listings (2004-Jul-31)
  * show Unified, Context and Side-by-side diffs in HTML instead of
    in bare text pages (2004-Jun-22)
  * make View/Download links work the same for all file types
    (2004-Jan-21)
  * add links to tip of selected branch on log page (2005-Oct-03)