@@ -132,12 +132,19 @@
   <li>options/use_pagesize</li>
   <li>options/use_localtime</li>
   <li>options/cross_copies</li>
+  <li>options/use_highlight</li>
+  <li>options/highlight_path</li>
+  <li>options/highlight_style</li>
+  <li>options/highlight_line_numbers</li>
+  <li>options/highlight_convert_tabs</li>
   <li>options/use_php</li>
   <li>options/php_path</li>
   <li>options/svn_path</li>
   <li>templates/error</li>
   <li>templates/query_form</li>
   <li>templates/query_results</li>
+  <li>cvsdb/port</li>
+  <li>cvsdb/rss_row_limit</li>
 </ul>
 
 <p>The following options have been removed:</p>
